@@ -26,6 +26,7 @@ version 9.9 (2010.04...):
  * [#camera]: added colorspace rgba
  * [#io.quartz]: added support for keypress and keyrelease
  * [#io.quartz]: added 'menubar' method (show/hide system menubar on OSX)
+ * [#io.quartz]: added hidecursor and setcursor
  * [#io.quicktimecamera]: colorspace rgba's alpha=255 now.
  * [#io.quicktimecamera]: added colorspaces y, yuv, rgb.
  * [#io.videodev] and [#camera]: removed attribute 'transfer'
